# migrol-coupon-code-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-build.yaml
crontab/: root
src/: coupon_manager.py  game_runner.py  migrol_api.py  telegram_notifier.py
